Fix mobile scaling behavior on mobile devices

--- a/style.css
+++ b/style.css
@@ -10063,10 +10063,8 @@ div[class*=" gallery-columns-"] {
 		margin: 0;
 		width: 100%;
 		overflow-x: clip;
-		inline-size: calc(100% * var(--mbf-mobile-scale-inverse));
-		min-block-size: calc(100vh * var(--mbf-mobile-scale-inverse));
-		transform: scale(var(--mbf-mobile-scale));
-		transform-origin: top left;
+		inline-size: 100%;
+		min-block-size: 100vh;
 		margin-inline: 0;
 	}
 
